Utilized Pair and Triple classes for storing conflict region pairs, instead of ArrayLists